kubernetes-learning-multinode-cluster/app-deploy/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: myflaskvuejsproject   # <-- সব resource এই namespace এ থাকবে
  labels:
    app: myflaskvuejsproject
    env: production
