kubernetes-learning-multinode-cluster/app-deploy/06-frontend-deployment.yaml
# =============================================
# 06-frontend-deployment.yaml
# কাজ: Vue.js frontend চালানো (Docker Hub এর image দিয়ে)
# Image: ranafge/myflaskvuejsproject-frontend
# =============================================
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: myflaskvuejsproject
spec:
  replicas: 2                  # HA এর জন্য ২টি pod
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ranafge/myflaskvuejsproject-frontend:latest
          ports:
            - containerPort: 80    # সাধারণত Vue build nginx দিয়ে 80 পোর্টে serve হয়
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
