kubernetes-learning-multinode-cluster/app-deploy/07-frontend-service.yaml
# =============================================
# 07-frontend-service.yaml
# কাজ: Frontend pod গুলোর সামনে internal load-balancer (ClusterIP)
# Ingress এই service নাম দিয়ে frontend এ পৌঁছাবে
# =============================================
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: myflaskvuejsproject
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
      name: http
